# zcllm

./: .gitignore  main.py  pyproject.toml  sematic_search.ipynb
.github/workflows/: render-qmd.yml
precourse/: README.md  main.py  precourse.ipynb  precourse.qmd  pyproject.toml
week1/: README.md  homework.ipynb  rag-intro.ipynb  week1.ipynb  week1.qmd
week2/: README.md  homework.ipynb  hybrid_search.ipynb  week2.qmd
ws1/: README.md  homework.qmd  notes.html  notes.qmd
ws_agents1/: agentic_rag.ipynb  agentic_rag.md  async_mcp_client.py  chat_assistant.py  homework.ipynb  homework_chat.ipynb  mcp_client.py  mcp_server_toy.py  mcp_tools.py  weather_server.py
