[project]
name = "zcllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.0.1",
    "ipykernel>=6.29.5",
    "notebook>=7.4.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
