[project]
name = "zcllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch==8.17",
    "ipykernel>=6.29.5",
    "minsearch>=0.0.2",
    "notebook>=7.4.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
